Massive fixes to connection and syntax issues